# FreezeBodyPairs

./: CMakeLists.txt  CMakePresets.json  SKSE 插件生命周期 · API 使用对照表.md  check.ps1  vcpkg-configuration.json  vcpkg.json
cmake/: x64-windows-skse.cmake
contrib/Distribution/fomod/: ModuleConfig.xml
include/: Hook.h  fmt_rel_version.h
include/Common/: Common.h  HitCounterManager.h
include/shim/: articuno_compat_layer.h  ryml_compat_shim.h
src/: Config.cpp  Config.h  HitCounterManager.cpp  Main.cpp  Papyrus.cpp  Papyrus.h
src/Console/: ConsoleCommands.cpp  ConsoleCommands.h
src/Hook/: Actor3DIndex.cpp  Actor3DIndex.h  ActorAnimationEventSink.cpp  ActorAnimationEventSink.h  ActorDeathEventSink.cpp  ActorDeathEventSink.h  ActorLifecycleManager.cpp  ActorLifecycleManager.h  ActorUnloadEventSink.cpp  ActorUnloadEventSink.h  EquipmentHook.cpp  EquipmentHook.h  Hook.cpp  SkeletonHook.cpp  SkeletonHook.h
src/Input/: InputChordDetector.cpp  InputChordDetector.h  InputHook.cpp  InputHook.h
src/Logic/: ClipBoneMap.cpp  ClipBoneMap.h
src/Utils/: BoneUtils.cpp  BoneUtils.h  FreezeBoneManager.cpp  FreezeBoneManager.h  FreezeManager.cpp  FreezeManager.h  HavokPose.cpp  HavokPose.h
test/: HitCounterManager.cpp
